fixes #4983 - fix sync cancel button alignment issue

--- a/app/assets/stylesheets/katello/contents.scss
+++ b/app/assets/stylesheets/katello/contents.scss
@@ -449,7 +449,10 @@ $container_width: ($static_width/2) - 36;
         position: relative;
         text-align: left;
         bottom: 18px;
-        left: 110px;
+        left: 30px;
+      }
+      .progress {
+        display: inline-block;
       }
     }
   }
